# quince_sqlite

./: CMakeLists.txt
src/: CMakeLists.txt  database.cpp  dialect_sql.cpp
